--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bike-rental-reservation-system-backend",
+  "name": "bike-rental-reservation",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
