Project ready to deploy

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bike-rental-reservation",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/server.js",
   "scripts": {
     "dev": "nodemon ./dist/server.js",
     "start:prod": "node ./dist/server.js",
